# Finetune-miniLM

./: .gitignore  README.md  app.py  setup.cfg
finetune_minilm/: __init__.py  data.py  nn.py  tensorboard.py  trainerwithtensorboard.py  utilities.py
