[metadata]
name = lai-finetune-minilm
version = 0.0.1
description = LAI component
long_description = file: README.md
author = Lightning-AI
url = https://github.com/Lightning-AI/Finetune-miniLM
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, AI
project_urls =
    source = https://github.com/Lightning-AI/Finetune-miniLM
    tracker = https://github.com/Lightning-AI/Finetune-miniLM/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    # pin latest for ease of development, can be relaxed later
    transformers>=4.25.1
    sentence-transformers>=2.2.2
    torch>=1.13
    lightning>=1.8.4
    torchmetrics>=0.11.0

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1